fixed some issues | added db

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -2,7 +2,7 @@
         <div class="frame">
             <a class="uk-link-reset" href="/goods/{{product.id}}" style="width: 100%;">
 
-                <div style="height: 70%; background-size: cover;" uk-img data-src="{{product.picture1}}"></div>
+                <div style="height: 70%; background-size: cover" class=" uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" uk-img data-src="{{product.picture1}}"></div>
                 <!-- uk-margin-small-left -->
                 <div>
                     <p style="font-weight: 450; font-size: 30px;" class=" uk-margin-remove-bottom">{{product.show_price}} ₽</p>
