fixed form of cart

--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -134,12 +134,6 @@
                         <form method="POST" action="">
                             <div class="uk-modal-body uk-margin-left uk-margin-right uk-margin-bottom" uk-overflow-auto
                                 style="padding: 0">
-                                <img>
-                                <h4 class="uk-margin-remove-top">Название товара</h4>
-                                <div class="uk-flex">
-                                    <p class="uk-margin-small-top">Оплата: </p>
-                                    <p class="uk-margin-left uk-margin-small-top"> картой онлайн </p>
-                                </div>
                                 <div class="uk-flex">
                                     <p class="uk-margin-small-top">Количество: </p>
                                     <div
@@ -152,20 +146,17 @@
                                             uk-icon="icon: plus"></a>
                                     </div>
                                 </div>
-                                <div class="uk-flex uk-flex-top uk-flex-between uk-margin">
-                                    <p class="uk-margin-small-top uk-width-2-5">Количество: </p>
-                                    <div class="uk-grid-small" uk-grid>
+                                <div class="uk-flex uk-flex-top uk-flex-between uk-flex-middle uk-margin">
+                                    <p class="uk-margin-remove">Количество: </p>
+                                    <div class="uk-grid-small uk-text-left uk-width-expand uk-margin-small-left" uk-grid>
                                         {% for size in product.sizes %}
-                                        <label>
-                                            <input type="radio" name="size" class="uk-radio" id="" value="{{size}}">
-                                            {{size}}
+                                        <label class="uk-flex uk-flex-middle">
+                                            <input type="radio" name="size" class="uk-radio uk-margin-small-right" id="" value="{{size}}">
+                                            <p class="uk-margin-remove">{{size}}</p>
                                         </label>
                                         {% endfor %}
                                     </div>
                                 </div>
-                                <p for="textarea">Пожелания к товару:</p>
-                                <textarea class="uk-textarea" name="message" id="" rows="5"
-                                    style="width: 100%;"></textarea>
                             </div>
 
                             <div class="uk-modal-footer uk-text-right">
