--- a/bizopt/BO/templates/cart.html
+++ b/bizopt/BO/templates/cart.html
@@ -9,19 +9,19 @@
 <body>
     <div style="width: 80%; margin-left: 10%">
         {% if shops  %}
-        <form method="post">
-            <div>
-                <div class="uk-flex-column">
-                    <div class="uk-flex" style="gap:2%">
-                        <div>
-                            <!-- <p style="font-weight: 600; font-size: 2.625em;">Корзина</p> -->
-                            <h1 class="">Корзина</h1>
-                        </div>
-                        <p class="uk-text-bottom uk-margin-small-left">n товаров</p>
+        <div>
+            <div class="uk-flex-column">
+                <div class="uk-flex" style="gap:2%">
+                    <div>
+                        <!-- <p style="font-weight: 600; font-size: 2.625em;">Корзина</p> -->
+                        <h1 class="">Корзина</h1>
                     </div>
+                    <p class="uk-text-bottom uk-margin-small-left">n товаров</p>
+                </div>
 
-                    <div class="uk-width-1 uk-flex">
-                        <div class="uk-width-3-4 uk-flex-column">
+                <div class="uk-width-1 uk-flex">
+                    <form method="post" class="uk-width-3-4">
+                        <div class="uk-flex-column">
                             {% for shop in shops %}
                             <div class="uk-width-1 uk-border-rounded"
                                 style="background-color: lightgrey; margin: 10px 0">
@@ -66,51 +66,49 @@
                             {% endfor %}
                             {% endfor %}
                         </div>
+                    </form>
 
+                    <div class="uk-width-1-4 uk-flex-column uk-margin-left">
 
-                        <div class="uk-width-1-4 uk-flex-column uk-margin-left">
-
-                            <div>
-                                <a class="uk-button uk-button-secondary uk-border-rounded uk-button-large uk-width-1"
-                                    href="#submit-form" uk-toggle>
-                                    Перейти к оформлению
-                                </a>
-                            </div>
-
-                            <div class="uk-flex-column uk-border-rounded"
-                                style="background-color: rgba(211, 211, 211, 0.482); height: 30vh">
-
-                                <div class="uk-flex uk-margin-left uk-margin-top">
-                                    <div class="uk-margin-top">
-                                        <p style="font-weight: 600; font-size: 1.45em;">Итого</p>
-                                        <p style="font-weight: 600; font-size: 1em; margin: 0">Всего n товара(ов)</p>
-                                        <p style="font-weight: 600; font-size: 1em; margin: 0">Скидки</p>
-                                    </div>
-                                    <div class="uk-margin-top uk-margin-left">
-                                        <p style="font-weight: 600; font-size: 1.45em;">{{sum}} р</p>
-                                        <p style="font-weight: 600; font-size: 1em; margin: 0">{{sum}} р</p>
-                                        <p style="font-weight: 600; font-size: 1em; margin: 0">0</p>
-                                    </div>
-                                </div>
-
-                                <div class="uk-margin-left uk-margin-medium-top">
-                                    <div>
-                                        <div class="uk-flex">
-
-                                            <input class="uk-input uk-width-3-4 uk-margin-remove" placeholder="промокод"
-                                                type="text">
-                                            <button
-                                                class="uk-button uk-button-secondary uk-margin-right">применить</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-
+                        <div>
+                            <a class="uk-button uk-button-secondary uk-border-rounded uk-button-large uk-width-1"
+                                href="#submit-form" uk-toggle>
+                                Перейти к оформлению
+                            </a>
                         </div>
 
-                        <div id="submit-form" uk-modal>
-                            <div class="uk-modal-dialog">
+                        <div class="uk-flex-column uk-border-rounded"
+                            style="background-color: rgba(211, 211, 211, 0.482); height: 30vh">
+
+                            <div class="uk-flex uk-margin-left uk-margin-top">
+                                <div class="uk-margin-top">
+                                    <p style="font-weight: 600; font-size: 1.45em;">Итого</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">Всего n товара(ов)</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">Скидки</p>
+                                </div>
+                                <div class="uk-margin-top uk-margin-left">
+                                    <p style="font-weight: 600; font-size: 1.45em;">{{sum}} р</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">{{sum}} р</p>
+                                    <p style="font-weight: 600; font-size: 1em; margin: 0">0</p>
+                                </div>
+                            </div>
+
+                            <div class="uk-margin-left uk-margin-medium-top">
+                                <div>
+                                    <div class="uk-flex">
+
+                                        <input class="uk-input uk-width-3-4 uk-margin-remove" placeholder="промокод"
+                                            type="text">
+                                        <button class="uk-button uk-button-secondary uk-margin-right">применить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="submit-form" uk-modal>
+                        <div class="uk-modal-dialog">
+                            <form action="" method="post">
                                 <div>
                                     <button class="uk-modal-close-default" type="button" uk-close></button>
                                 </div>
@@ -123,12 +121,13 @@
                                     uk-overflow-auto style="padding: 0">
                                     <img>
                                     <div class="uk-flex">
-                                        <p class="uk-margin-small-top">Оплата: </p>
-                                        <p class="uk-margin-left uk-margin-small-top"> картой онлайн </p>
+                                        <p class="uk-margin-small-top uk-width-1-5">Оплата: </p>
+                                        <p class="uk-margin-left uk-margin-small-top uk-width-expand"> картой онлайн
+                                        </p>
                                     </div>
                                     <div class="uk-flex">
-                                        <p class="uk-margin-small-top">Адрес доставки:</p>
-                                        <div class="uk-margin-left" style="width: 65%">
+                                        <p class="uk-margin-small-top uk-width-1-5">Адрес доставки:</p>
+                                        <div class="uk-margin-left uk-width-expand">
                                             <input class="uk-input" name="address" id="form-stacked-text" type="text"
                                                 placeholder="г.Москва, Ленинградский проезд 111, кв 101, 100102">
                                             <p class="uk-text-meta uk-margin-remove" style="font-size: 12px">
@@ -144,21 +143,19 @@
                                 <div class="uk-modal-footer uk-text-right">
                                     <button class="uk-button uk-button-default uk-modal-close"
                                         type="button">Закрыть</button>
-                                    <form method="POST">
-                                        {% csrf_token %}
-                                        <button class="uk-button uk-button-primary" style="background-color: #B54F00;"
-                                            name="payButton" type="submit">Заказать товар</button>
-                                    </form>
+                                    {% csrf_token %}
+                                    <button class="uk-button uk-button-primary" style="background-color: #B54F00;"
+                                        name="payButton" type="submit">Заказать товар</button>
                                 </div>
 
-                            </div>
+                            </form>
                         </div>
-
-
                     </div>
+
+
                 </div>
             </div>
-        </form>
+        </div>
         {% else %}
 
         <div>
@@ -168,16 +165,6 @@
             <div>
                 <h1 style="font-size: 2.5em; text-align: center;">Сложите в корзину нужные товары</h1>
                 <p style="text-align: center">А чтобы их найти, загляните в каталог</p>
-
-
-                <div class="uk-width-1 uk-flex-center" style="display: flex; gap: 2%;height: auto; margin: auto;">
-
-                    <p><a class="uk-button uk-button-secondary uk-border-pill uk-margin-small-top" href="/goods/">Показать еще</a></p>
-                    <p> <a href="/brands/" class="uk-button uk-button-text"> Смотреть все</a></p>
-
-                </div>
-
-
             </div>
 
             <br>
@@ -186,6 +173,13 @@
             <div style="width: 100%">
                 <h2 class="uk-width-1-2 uk-text-center" style="margin: 0 auto;">Как
                     вам такие товары?</h2>
+                <div class="uk-width-1 uk-flex-center" style="display: flex; gap: 2%;height: auto; margin: auto;">
+
+                    <p><a class="uk-button uk-button-secondary uk-border-pill uk-margin-small-top"
+                            href="/goods/">Показать еще</a></p>
+                    <!-- <p> <a href="/brands/" class="uk-button uk-button-text"> Смотреть все</a></p> -->
+
+                </div>
                 <div class="uk-grid-match uk-grid-medium uk-child-width-1-3" style="margin: 2% auto 0 auto" uk-grid>
                     {% for items in randProducts %}
                     {% for item in items %}
